--- a/war/WEB-INF/classes/.gitignore
+++ b/war/WEB-INF/classes/.gitignore
@@ -1,1 +1,267 @@
 /com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
